--- a/public_html/index.html
+++ b/public_html/index.html
@@ -17,7 +17,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
-        <div class="content">
+        <div class="index_content">
             <h1>Hi, I'm Claire!</h1>
 
             <p>Chuck Norris drives an ice cream truck covered in human skulls. Chuck Norris can win a game of Connect Four in only three moves, No matter what your mother always said, Chuck Norris can tune a fish. Chuck Norris can lead a horse to water AND make it drink. Chuck Norris doesn't wear a watch. HE decides what time it is, Chuck Norris once roundhouse kicked someone so hard that his foot broke the speed of light, went back in time, and killed Amelia Earhart while she was flying over the Pacific Ocean Chuck Norris is the only man to ever defeat a brick wall in a game of tennis, Someone once videotaped Chuck Norris getting pissed off. It was called Walker: Texas Chain Saw Massacre, The dress is whatever color Chuck Norris says it is Someone once videotaped Chuck Norris getting pissed off. It was called Walker: Texas Chain Saw Massacre Chuck Norris does not get frostbite. Chuck Norris bites frost.</p>
