--- a/public_html/aboutme.html
+++ b/public_html/aboutme.html
@@ -17,8 +17,10 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
-        <div class="content">
-            
+        <div class="about_me_content">
+            <img class="boxshadow" src="img/PKandMe.jpg" alt="PK and Me">
+
+            <p>The chief export of Chuck Norris is Pain, Chuck Norris doesn't wash his clothes, he disembowels them Chuck Norris can slam a revolving door, Chuck Norris counted to infinity - twice, Someone once videotaped Chuck Norris getting pissed off.<br /><br />It was called Walker: Texas Chain Saw Massacre, Chuck Norris originally appeared in the "Street Fighter II" video game, but was removed by Beta Testers because every button caused him to do a roundhouse kick. When asked bout this "glitch," Norris replied, "That's no glitch.". Chuck Norris originally appeared in the "Street Fighter II" video game, but was removed by Beta Testers because every button caused him to do a roundhouse kick. When asked bout this "glitch," Norris replied, "That's no glitch.", Chuck Norris counted to infinity - twice Chuck Norris counted to infinity - twice.</p>
         </div>
         <footer>
             <!-- Twitter -->
