--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="css/styles.css">
         <link href="https://fonts.googleapis.com/css?family=Grand+Hotel|Mitr" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </head>
     <body>
         <div class="header">
@@ -11,17 +12,23 @@
         </div>
         <div class="navigation">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="aboutme.html">About Me</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="aboutme.html">About Me</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
-        <div class="about_me_content">
-            <img class="boxshadow" src="img/PKandMe.jpg" alt="PK and Me">
+        <div class="index_content">
+            <h1>Welcome!</h1>
+            
+            <div>
+                    <p>Chuck Norris drives an ice cream truck covered in human skulls. Chuck Norris can win a game of Connect Four in only three moves, No matter what your mother always said, Chuck Norris can tune a fish. Chuck Norris can lead a horse to water AND make it drink. Chuck Norris doesn't wear a watch. HE decides what time it is, Chuck Norris once roundhouse kicked someone so hard that his foot broke the speed of light, went back in time, and killed Amelia Earhart while she was flying over the Pacific Ocean Chuck Norris is the only man to ever defeat a brick wall in a game of tennis, Someone once videotaped Chuck Norris getting pissed off. It was called Walker: Texas Chain Saw Massacre, The dress is whatever color Chuck Norris says it is Someone once videotaped Chuck Norris getting pissed off. It was called Walker: Texas Chain Saw Massacre Chuck Norris does not get frostbite. Chuck Norris bites frost.</p>
 
-            <p>The chief export of Chuck Norris is Pain, Chuck Norris doesn't wash his clothes, he disembowels them Chuck Norris can slam a revolving door, Chuck Norris counted to infinity - twice, Someone once videotaped Chuck Norris getting pissed off.<br /><br />It was called Walker: Texas Chain Saw Massacre, Chuck Norris originally appeared in the "Street Fighter II" video game, but was removed by Beta Testers because every button caused him to do a roundhouse kick. When asked bout this "glitch," Norris replied, "That's no glitch.". Chuck Norris originally appeared in the "Street Fighter II" video game, but was removed by Beta Testers because every button caused him to do a roundhouse kick. When asked bout this "glitch," Norris replied, "That's no glitch.", Chuck Norris counted to infinity - twice Chuck Norris counted to infinity - twice.</p>
+                    <a class="twitter-timeline" data-lang="en" data-width="600" data-theme="light" data-link-color="#E81C4F" data-tweet-limit="4" href="https://twitter.com/JustAskClaire?ref_src=twsrc%5Etfw">Tweets by JustAskClaire</a> 
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
         </div>
+
         <footer>
             <!-- Twitter -->
             <div>
@@ -68,6 +75,18 @@
                     </span>
                 </a>
             </div>
+
+            
+            <script src="js/tweecool.min.js"></script>
+            <script>
+                $(document).ready(function() {
+                    $('#tweecool').tweecool({
+                    //settings
+                    username : 'justaskclaire',
+                    limit : 5
+                    });
+                });
+            </script>
         </footer>
     </body>
 </html>
