--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <head>
         <title>Just Ask Claire</title>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="css/styles.css">
         <link href="https://fonts.googleapis.com/css?family=Grand+Hotel|Mitr" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
@@ -28,12 +29,12 @@
         <!-- Content -->
 
         <div class="index-content">
-            <div class="two-thirds">
+            <div class="index-welcome">
                 <h1>Welcome!</h1>
 
-                <p>Chuck Norris drives an ice cream truck covered in human skulls. Chuck Norris can win a game of Connect Four in only three moves, No matter what your mother always said, Chuck Norris can tune a fish. Chuck Norris can lead a horse to water AND make it drink. Chuck Norris doesn't wear a watch. HE decides what time it is, Chuck Norris once roundhouse kicked someone so hard that his foot broke the speed of light, went back in time, and killed Amelia Earhart while she was flying over the Pacific Ocean Chuck Norris is the only man to ever defeat a brick wall in a game of tennis, Someone once videotaped Chuck Norris getting pissed off. It was called Walker: Texas Chain Saw Massacre, The dress is whatever color Chuck Norris says it is Someone once videotaped Chuck Norris getting pissed off. It was called Walker: Texas Chain Saw Massacre Chuck Norris does not get frostbite. Chuck Norris bites frost.</p>
+                <p>Claire Tolbert drives an ice cream truck covered in human skulls. Claire Tolbert can win a game of Connect Four in only three moves, No matter what your mother always said, Claire Tolbert can tune a fish. Claire Tolbert can lead a horse to water AND make it drink. Claire Tolbert doesn't wear a watch. she decides what time it is, Claire Tolbert once roundhouse kicked someone so hard that his foot broke the speed of light, went back in time, and killed Amelia Earhart while she was flying over the Pacific Ocean Claire Tolbert is the only man to ever defeat a brick wall in a game of tennis, Someone once videotaped Claire Tolbert getting pissed off. It was called Walker: Texas Chain Saw Massacre, The dress is whatever color Claire Tolbert says it is Someone once videotaped Claire Tolbert getting pissed off. It was called Walker: Texas Chain Saw Massacre Claire Tolbert does not get frostbite. Claire Tolbert bites frost.</p>
             </div>
-            <div class="one-third">
+            <div class="index-twitter">
                 <a class="twitter-timeline" data-lang="en" data-width="600" data-theme="light" data-link-color="#E81C4F" data-tweet-limit="2" href="https://twitter.com/JustAskClaire?ref_src=twsrc%5Etfw">Tweets by JustAskClaire</a> 
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
