--- a/contact.html
+++ b/contact.html
@@ -32,10 +32,9 @@
             </div>
             
             <!-- Twitch -->
-            <div>
+            <div class="twitch-logo">
                 <a href="https://www.twitch.tv/justaskclaire" target="_blank">
                     <span class="fa-stack fa-fw fa-2x">
-                        <i class="fas fa-square fa-stack-2x"></i>
                         <i class="fab fa-twitch fa-stack-1x"></i>                    
                     </span>
                 </a>
