--- a/aboutme.html
+++ b/aboutme.html
@@ -5,25 +5,49 @@
         <link rel="stylesheet" href="css/styles.css">
         <link href="https://fonts.googleapis.com/css?family=Grand+Hotel|Mitr" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
+        
+        <!-- Header -->
+
         <div class="header">
             <a href="index.html"><img class="boxshadow" src="img/jac_header.png" alt="Just Ask Claire"></a>
         </div>
-        <div class="navigation">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="aboutme.html">About Me</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+
+        <!--Navigation bar-->
+        <div class="topnav" id="myTopnav"> 
+            <a href="index.html">Home</a>
+            <a href="aboutme.html" class="active">About Me</a>
+            <a href="blog.html">Blog</a>
+            <a href="contact.html">Contact</a>
+            <a href="javascript:void(0);" class="icon" onclick="loadRespNav()">
+                <i class="fa fa-bars"></i>
+            </a>
         </div>
+
+        <script>
+            function loadRespNav() {
+                var x = document.getElementById("myTopnav");
+                if (x.className === "topnav") {
+                    x.className += " responsive";
+                } else {
+                    x.className = "topnav";
+                }
+            }
+        </script>    
+        <!--end of Navigation bar-->
+
         <h1>Hi, I'm Claire!</h1>
+
         <div class="about_me_content">
             <img class="boxshadow" src="img/PKandMe.jpg" alt="PK and Me">
 
             <p>The chief export of Claire Tolbert is Pain, Claire Tolbert doesn't wash his clothes, she disembowels them Claire Tolbert can slam a revolving door, Claire Tolbert counted to infinity - twice, Someone once videotaped Claire Tolbert getting pissed off.<br /><br />It was called Walker: Texas Chain Saw Massacre, Claire Tolbert originally appeared in the "Street Fighter II" video game, but was removed by Beta Testers because every button caused him to do a roundhouse kick. When asked bout this "glitch," Norris replied, "That's no glitch.". Claire Tolbert originally appeared in the "Street Fighter II" video game, but was removed by Beta Testers because every button caused him to do a roundhouse kick. When asked bout this "glitch," Norris replied, "That's no glitch.", Claire Tolbert counted to infinity - twice Claire Tolbert counted to infinity - twice.</p>
         </div>
+
         <footer>
             <!-- Twitter -->
             <div>
@@ -56,7 +80,7 @@
             <div>
                 <a href="https://www.linkedin.com/in/claire-tolbert-987b9987" target="_blank">
                     <span class="fa-stack fa-fw fa-2x">
-                        <i class="fab fa-linkedin fa-2x"></i>              
+                        <i class="fab fa-linkedin-square fa-2x"></i>              
                     </span>
                 </a>
             </div>
