--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css?family=Grand+Hotel|Mitr" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
@@ -16,9 +17,7 @@
             <a href="index.html"><img class="boxshadow" src="img/jac_header.png" alt="Just Ask Claire"></a>
         </div>
 
-        <!-- Navigation -->
-
-        <!-- class="navigation" -->
+        <!--Navigation bar-->
         <div class="topnav" id="myTopnav"> 
             <a href="index.html" class="active">Home</a>
             <a href="aboutme.html">About Me</a>
@@ -38,8 +37,8 @@
                     x.className = "topnav";
                 }
             }
-        </script>
-
+        </script>    
+        <!--end of Navigation bar-->
 
         <!-- Content -->
 
@@ -89,7 +88,7 @@
             <div>
                 <a href="https://www.linkedin.com/in/claire-tolbert-987b9987" target="_blank">
                     <span class="fa-stack fa-fw fa-2x">
-                        <i class="fab fa-linkedin fa-2x"></i>              
+                        <i class="fab fa-linkedin-square fa-2x"></i>              
                     </span>
                 </a>
             </div>
