--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
             <a href="index.html"><img class="boxshadow" src="img/jac_header.png" alt="Just Ask Claire"></a>
         </div>
 
-        <!--Navigation bar-->
+        <!-- Navigation bar
         <div class="topnav" id="myTopnav"> 
             <a href="index.html" class="active">Home</a>
-            <a href="aboutme.html">About Me</a>
-            <a href="blog.html">Blog</a>
             <a href="contact.html">Contact</a>
             <a href="javascript:void(0);" class="icon" onclick="loadRespNav()">
                 <i class="fa fa-bars"></i>
@@ -38,15 +36,30 @@
                 }
             }
         </script>    
-        <!--end of Navigation bar-->
+        end of Navigation bar -->
 
         <!-- Content -->
 
         <div class="index-content">
             <div class="index-welcome">
-                <h1>Welcome!</h1>
+                <h1>Howdy!</h1>
+                <div class="intro">
+                    <p>
+                        My name is Claire Tolbert. I'm currently a .NET Full Stack Developer in Plano, TX. I am passionate about coffee, code, and my Corgi, named Pancake. 
 
-                <p>Claire Tolbert drives an ice cream truck covered in human skulls. Claire Tolbert can win a game of Connect Four in only three moves, No matter what your mother always said, Claire Tolbert can tune a fish. Claire Tolbert can lead a horse to water AND make it drink. Claire Tolbert doesn't wear a watch. she decides what time it is, Claire Tolbert once roundhouse kicked someone so hard that his foot broke the speed of light, went back in time, and killed Amelia Earhart while she was flying over the Pacific Ocean Claire Tolbert is the only man to ever defeat a brick wall in a game of tennis, Someone once videotaped Claire Tolbert getting pissed off. It was called Walker: Texas Chain Saw Massacre, The dress is whatever color Claire Tolbert says it is Someone once videotaped Claire Tolbert getting pissed off. It was called Walker: Texas Chain Saw Massacre Claire Tolbert does not get frostbite. Claire Tolbert bites frost.</p>
+                        I can't start my day without at least a shot of espresso, and sometimes Monday mornings require a Venti Americano just to get me to work! 
+                    </p>
+                    <p>
+                        What keeps me motivated is my volunteer work with Women Who Code -- helping women excel in technology careers. 
+                        
+                        I am currently a Director of the DFW Network.
+
+                        I have so much fun helping organize events, coordinate sponsors, and build partnerships with technology companies in the DFW area. 
+                    </p>
+                    <p>
+                        In between work and Women Who Code events, I really enjoy playing board games, playing video games, and even binging Netflix now and then.
+                    </p>
+                </div>
             </div>
             <div class="index-twitter">
                 <a class="twitter-timeline" data-lang="en" data-width="600" data-theme="light" data-link-color="#E81C4F" data-tweet-limit="2" href="https://twitter.com/JustAskClaire?ref_src=twsrc%5Etfw">Tweets by JustAskClaire</a> 
