Update to logo, some fonts, added links.css to be used later

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
         <title>Just Ask Claire</title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="css/styles.css">
-        <link href="https://fonts.googleapis.com/css?family=Grand+Hotel|Mitr" rel="stylesheet">
+        <link rel="stylesheet" href="css/links.css">
+        <link rel="stylesheet" href="scss/styles.scss">
+        <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Oleo+Script+Swash+Caps" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
@@ -14,7 +16,7 @@
         <!-- Header -->
 
         <div class="header">
-            <a href="index.html"><img class="boxshadow" src="img/jac_header.png" alt="Just Ask Claire"></a>
+            <a href="index.html"><img src="img/logo.png" alt="Just Ask Claire Logo"></a>
         </div>
 
         <!-- Navigation bar
@@ -42,7 +44,7 @@
 
         <div class="index-content">
             <div class="index-welcome">
-                <h1>Howdy!</h1>
+                <h1 class="underline">Howdy!</h1>
                 <div class="intro">
                     <p>
                         My name is Claire Tolbert. I'm currently a .NET Full Stack Developer in Plano, TX. I am passionate about coffee, code, and my Corgi, named Pancake. 
@@ -62,7 +64,7 @@
                 </div>
             </div>
             <div class="index-twitter">
-                <a class="twitter-timeline" data-lang="en" data-width="600" data-theme="light" data-link-color="#E81C4F" data-tweet-limit="2" href="https://twitter.com/JustAskClaire?ref_src=twsrc%5Etfw">Tweets by JustAskClaire</a> 
+                <a class="twitter-timeline" data-lang="en" data-width="600" data-theme="light" data-link-color="#E81C4F" data-tweet-limit="3" href="https://twitter.com/JustAskClaire?ref_src=twsrc%5Etfw">Tweets by JustAskClaire</a> 
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </div>
