Added scss and css.map files; removed underline class for header

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div class="index-content">
             <div class="index-welcome">
-                <h1 class="underline">Howdy!</h1>
+                <h1>Howdy!</h1>
                 <div class="intro">
                     <p>
                         My name is Claire Tolbert. I'm currently a .NET Full Stack Developer in Plano, TX. I am passionate about coffee, code, and my Corgi, named Pancake. 
