--- a/index.html
+++ b/index.html
@@ -47,19 +47,17 @@
                 <h1>Howdy!</h1>
                 <div class="intro">
                     <p>
-                        My name is Claire Tolbert. I'm currently a .NET Full Stack Developer in Plano, TX. I am passionate about coffee, code, and my Corgi, named Pancake. 
+                        My name is Claire Tolbert. I'm currently a .NET Full Stack Developer in Plano, TX. I am passionate about coffee, code, and chaos.
 
                         I can't start my day without at least a shot of espresso, and sometimes Monday mornings require a Venti Americano just to get me to work! 
                     </p>
                     <p>
-                        What keeps me motivated is my volunteer work with Women Who Code -- helping women excel in technology careers. 
+                        At work, I wear a series of hats. Some days, I'm troubleshooting issues with a client. Other days, I'm automating an internal process.
                         
-                        I am currently a Director of the DFW Network.
-
-                        I have so much fun helping organize events, coordinate sponsors, and build partnerships with technology companies in the DFW area. 
+                        I thrive under pressure, and love when production fires hit my desk.
                     </p>
                     <p>
-                        In between work and Women Who Code events, I really enjoy playing board games, playing video games, and even binging Netflix now and then.
+                        Outside of work, I really enjoy playing board games, playing video games, and even binging Netflix now and then.
                     </p>
                 </div>
             </div>
