Make headshot smaller; faster loading time, pls?

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-card">
-          <img src="img/headshot.jpg" style="width:100%" alt="Avatar">
+          <img src="img/sm_headshot.jpg" style="width:100%" alt="Avatar">
           <div class="w3-container">
             <h2>Claire Tolbert</h2>
           </div>
