Added ARGO to work history

--- a/index.html
+++ b/index.html
@@ -111,6 +111,13 @@
               Working with clients meant weekly design calls to turn their business requirements into logic in the application to increase healthcare claim acceptance rates.
           </p><br>
         </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Certified Programmer I / ARGO Data</b></h5>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2013 - Mar 2015</h6>
+          <p>While working at ARGO, I focused primarily on the Teller Base Product. This meant fixing bugs or adding new features - whatever was needed each day.
+            My biggest accomplishment was completely re-writing the Foreign Currency Exchange logic, which had quite a few issues when I joined the team.
+          </p><br>
+        </div>
       </div>
 
       <div class="w3-container w3-card w3-white">
