--- a/resume.html
+++ b/resume.html
@@ -20,8 +20,8 @@
     <div class="w3-bar w3-card w3-blue-grey w3-margin-bottom">
       <a href="index.html" class="w3-bar-item w3-hover-light-grey w3-button">Home</a>
       <a href="resume.html" class="w3-bar-item w3-hover-light-grey w3-button">Resume</a>
-      <!-- <a href="#" class="w3-bar-item w3-hover-light-grey w3-button">Alkami Slacker</a>
-      <a href="#" class="w3-bar-item w3-hover-light-grey w3-button">Instant Budgetier</a>
+      <a href="slacker.html" class="w3-bar-item w3-hover-light-grey w3-button">Slacker</a>
+      <!--<a href="#" class="w3-bar-item w3-hover-light-grey w3-button">Instant Budgetier</a>
       <a href="#" class="w3-bar-item w3-hover-light-grey w3-button">Blog</a> -->
     </div>
 
