Add instant budgetier

--- a/resume.html
+++ b/resume.html
@@ -21,8 +21,8 @@
       <a href="index.html" class="w3-bar-item w3-hover-light-grey w3-button">Home</a>
       <a href="resume.html" class="w3-bar-item w3-hover-light-grey w3-button">Resume</a>
       <a href="slacker.html" class="w3-bar-item w3-hover-light-grey w3-button">Slacker</a>
-      <!--<a href="#" class="w3-bar-item w3-hover-light-grey w3-button">Instant Budgetier</a>
-      <a href="#" class="w3-bar-item w3-hover-light-grey w3-button">Blog</a> -->
+      <a href="budgetier.html" class="w3-bar-item w3-hover-light-grey w3-button">Budgetier</a>
+      <!--<a href="#" class="w3-bar-item w3-hover-light-grey w3-button">Blog</a> -->
     </div>
 
     <!-- Left Column -->
