--- a/slacker.html
+++ b/slacker.html
@@ -1,9 +1,10 @@
 <html>
     <head>
         <script src="js/slacker.js"></script>
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/slacker.css">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link href="https://fonts.googleapis.com/css?family=Lobster+Two|Solway&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
@@ -14,8 +15,8 @@
                 <a href="index.html" class="w3-bar-item w3-hover-light-grey w3-button">Home</a>
                 <a href="resume.html" class="w3-bar-item w3-hover-light-grey w3-button">Resume</a>
                 <a href="slacker.html" class="w3-bar-item w3-hover-light-grey w3-button">Slacker</a>
-                <!--<a href="#" class="w3-bar-item w3-hover-light-grey w3-button">Instant Budgetier</a>
-                <a href="#" class="w3-bar-item w3-hover-light-grey w3-button">Blog</a> -->
+                <a href="budgetier.html" class="w3-bar-item w3-hover-light-grey w3-button">Budgetier</a>
+                <!--<a href="#" class="w3-bar-item w3-hover-light-grey w3-button">Blog</a> -->
             </div>
 
             <div class="slacker-container">
@@ -40,6 +41,6 @@
             </div>
 
         </div>
-    </body>
+    </body class="w3-light-grey">
 </html>
 
