Updates to website for new job

--- a/resume.html
+++ b/resume.html
@@ -36,15 +36,23 @@
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-dark-grey"></i>Performance Engineer</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-dark-grey"></i>Engineering Manager</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-dark-grey"></i>DFW, Texas</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-dark-grey"></i>justask@claire.dev</p>
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-dark-grey"></i>Skills</b></p>
+          <p>Leadership</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-blue-grey" style="width:70%">
+              <div class="w3-center w3-text-white">70%</div>
+            </div>
+          </div>
           <p>C#</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-blue-grey" style="width:60%">60%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-blue-grey" style="width:60%">
+              <div class="w3-center w3-text-white">60%</div>
+            </div>
           </div>
           <p>SQL</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
@@ -54,11 +62,15 @@
           </div>
           <p>HTML/CSS</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-blue-grey" style="width:60%">60%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-blue-grey" style="width:50%">
+              <div class="w3-center w3-text-white">50%</div>
+            </div>
           </div>
           <p>Javascript</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-blue-grey" style="width:50%">50%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-blue-grey" style="width:40%">
+              <div class="w3-center w3-text-white">40%</div>
+            </div>
           </div>
           <br>
 
@@ -89,9 +101,9 @@
         <div class="w3-container">
           <p>
             Passionate developer trying to make sense of the world through code, volunteering, and a corgi. 
-            With a background in client-facing development roles, I am most comfortable troubleshooting production problems with a client on the phone. 
-            At work, I enjoy automating repeptitive tasks, and helping my customers solve problems creatively with code. 
-            At home, I can usually be found playing board games or video games with friends... or hanging out with my corgi, Pancake.
+            With a background in client-facing backend development roles, I have transitioned into my first engineering leadership role.
+            At work, I enjoy problem solving, collaborating across departments, and advocating for engineering needs. 
+            At home, I can usually be found playing board games or video games with friends.
           </p>
         </div>
       </div>
@@ -99,28 +111,42 @@
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-dark-grey"></i>Work Experience</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Performance Engineer / Alkami</b></h5>
-          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2018 - <span class="w3-tag w3-blue-grey w3-round">Current</span></h6>
+          <h5 class="w3-opacity"><b>Engineering Manager | Larson Texts</b></h5>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2022 - <span class="w3-tag w3-blue-grey w3-round">Current</span></h6>
+          <p>My first role as an official engineering leader is focused on creating and maintaining consistent agile engineering processes.
+              I lead a team of 8 engineers while we build a math education web app for students across the nation.</p>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Backend Developer | degreed</b></h5>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2021 - Jul 2022</h6>
+          <p>My first job in EdTech, my time here was mostly spent focusing on updating our unit tests and migrating to a new data service layer.
+              Beyond normal scrum ceremonies, my time was spent deep in code, solving complex problems with my good friend, C#.</p>
+          <hr>
+        </div>        
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Senior Performance Engineer, Software Engineer | Alkami</b></h5>
+          <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2018 - Jun 2021</h6>
           <p>As a member of SRE, some days are spent triaging production fires, others are spent automating daily tasks. 
               Whether I'm elbow-deep in New Relic or reviewing code for a new tool, I love that I never know what's in store each day.</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Software Developer / brierley+partners</b></h5>
+          <h5 class="w3-opacity"><b>Software Developer | brierley+partners</b></h5>
           <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2017 - Jan 2018</h6>
           <p>With clients like Seven Eleven Japan, Orchard Supply Hardware, and Hertz, I served as a Developer and Lead Developer on three accounts while working at Brierley. 
             This meant working with clients to build custom loyalty rewards programs - from the database to the APIs.</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Software Engineer / nThrive (formerly MedAssets)</b></h5>
+          <h5 class="w3-opacity"><b>Software Engineer | nThrive (formerly MedAssets)</b></h5>
           <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2015 - Jan 2017</h6>
           <p>During my time here, I juggled five or more clients at a time, engaging at contract signing, and disengaging 60 days post-Go Live. 
               Working with clients meant weekly design calls to turn their business requirements into logic in the application to increase healthcare claim acceptance rates.
           </p><br>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Certified Programmer I / ARGO Data</b></h5>
+          <h5 class="w3-opacity"><b>Certified Programmer I | ARGO Data</b></h5>
           <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2013 - Mar 2015</h6>
           <p>While working at ARGO, I focused primarily on the Teller Base Product. This meant fixing bugs or adding new features - whatever was needed each day.
             My biggest accomplishment was completely re-writing the Foreign Currency Exchange logic, which had quite a few issues when I joined the team.
