--- a/resume.html
+++ b/resume.html
@@ -176,12 +176,10 @@
 
 <footer class="w3-container w3-blue-grey w3-center w3-margin-top">
   <h4>Find me on social media.</h4>
-  <a href="https://www.facebook.com/JustAskClaire/" target="_blank"><i class="fa fa-facebook-official fa-3x w3-hover-opacity w3-margin"></i></a>
-  <a href="https://twitter.com/justaskclaire" target="_blank"><i class="fa fa-twitter fa-3x w3-hover-opacity w3-margin"></i></a>
   <a href="https://medium.com/@justaskclaire" target="_blank"><i class="fa fa-medium fa-3x w3-hover-opacity w3-margin"></i></a>
   <a href="https://www.linkedin.com/in/justaskclaire/" target="_blank"><i class="fa fa-linkedin fa-3x w3-hover-opacity w3-margin"></i></a>
   <a href="https://github.com/justaskclaire/justaskclaire.com" target="_blank"><i class="fa fa-github fa-3x w3-hover-opacity w3-margin"></i></a>
-  <a href="https://www.twitch.tv/justaskclaire" target="_blank"><i class="fa fa-twitch fa-3x w3-hover-opacity w3-margin"></i></a>
+  <!-- <a href="https://www.twitch.tv/justaskclaire" target="_blank"><i class="fa fa-twitch fa-3x w3-hover-opacity w3-margin"></i></a> -->
 </footer>
 
 </body>
